# gpt-experimentation

./: README.md  finger_food.csv  notion_api.yaml  pyproject.toml
linkedin-ai/: agent_template.py  chat.py  mail.py
