[tool.poetry]
name = "linkedin-ai"
version = "0.1.0"
description = "GPT powered LinkedIn outreach tool"
authors = ["filiprejmus <rejmusfilip@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "linkedin_ai"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.5"
google-search-results = "^2.4.2"
tiktoken = "^0.3.3"
faiss-cpu = "^1.7.4"
banana-dev = "^4.0.2"
apify-client = "^1.1.1"
uvicorn = "^0.22.0"
fastapi = "^0.96.0"
pinecone-client = "^2.2.4"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
